# Auto-Regression-Grapher

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yaml
src/: ar_model.cpp  ar_model.h  exceptions.h  main.cpp  renderer.cpp  renderer.h
tests/: test_armodel_generate.cpp  test_compute_stats.cpp  test_get_run_stats.cpp
tests/integration/: test_ar_properties.cpp
tests/unit/: test_armodel_generate.cpp  test_compute_stats.cpp  test_get_run_stats.cpp
